[package]
name = "webcrawler"
version = "0.1.0"
authors = ["Ayush Singh <ayushsingh1325@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11" 
select = "0.5.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = "3.0.0-beta.2"
mime = "0.3.16"
serde = { version = "1", features = ["derive", "rc"]}
serde_json = "1.0"
hyper_serde = "0.11.1"
http-serde = "1.0.1"
robotstxt = "0.3.0"
url = { version = "2.2", features = ["serde"] }
